--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-timer-hook": "^3.0.7"
+    "react-timer-hook": "^3.0.7",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
