--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
+    "canvas-confetti": "^1.9.2",
+    "firebase": "^10.10.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
@@ -16,6 +22,7 @@
     "sharp": "^0.33.2"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20.11.30",
     "@types/react": "^18",
     "@types/react-dom": "^18",
