--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fireworks-js/preact": "^2.10.7",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "canvas-confetti": "^1.9.2",
